# comunidados

./: .env.global.example  ARCHITECTURE.md  OUTLINE.md  QUICKSTART.md  README.md  RUN_TESTS.md  TUTORIAL.md  docker-compose.yml  test.ipynb
api-agents-whatsapp/: .env.example  Dockerfile  README.md  pyproject.toml
api-agents-whatsapp/src/api_agents_whatsapp/: __init__.py  config.py  main.py  models.py  routes.py  services.py
api-audio-processing/: .env.example  Dockerfile  README.md
api-audio-processing/src/api_audio_processing/: config.py
api-mcp-projetos-lei/: .env.example  Dockerfile  IMPLEMENTACAO.md  README.md  pyproject.toml  test_scrapers.py  test_simple.py
api-mcp-projetos-lei/src/api_mcp_projetos_lei/: config.py  main.py  tools.py
api-mcp-projetos-lei/src/api_mcp_projetos_lei/scrapers/: __init__.py  camara_deputados.py
api-mcp-users/: .env.example  pyproject.toml
api-mcp-users/src/api_mcp_users/: __init__.py  config.py  main.py  tools.py
api-mcp-users/src/api_mcp_users.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
backend/: .dockerignore  Dockerfile  INTEGRATION.md  README.md  SUMMARY.md  package.json  setup.ps1  setup.sh
backend/src/: config.ts  index.ts
backend/src/controllers/: chat.controller.ts
backend/src/services/: rag.service.ts
orchestrator/: .env.example  Dockerfile  README.md  pyproject.toml
orchestrator/src/orchestrator/: __init__.py  config.py  main.py  models.py  models_db.py  routes.py
orchestrator/src/orchestrator/services/: agent_service.py  audio_service.py  message_buffer_service.py  message_service.py  user_service.py
screening/: .env.example  api-camara-deputados.ipynb  crawling-camara.ipynb  proposicoes.csv  requirements.txt  test-agents-api.py  test-agno-mcp.py  test-audio-processing-api.py  test-orchestrator.py  test-whatsapp-service.py  test.ipynb
whatsapp-service/: .env.example  Dockerfile  handlers.js  index.js  webhookServer.js
