[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "api-mcp-projetos-lei"
version = "0.1.0"
description = "MCP Server para projetos de lei e legislações brasileiras"
requires-python = ">=3.10"
dependencies = [
    "fastmcp>=0.2.0",
    "seleniumbase>=4.0.0",
    "httpx>=0.27.0",
    "beautifulsoup4>=4.12.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "python-dotenv>=1.0.0",
    "requests>=2.31.0",
    "duckduckgo_search>=2.6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.3",
    "pytest-asyncio>=0.21.1",
    "black>=23.12.0",
    "ruff>=0.1.11",
]

[project.scripts]
api-mcp-projetos-lei = "api_mcp_projetos_lei.main:main"

