[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "api-mcp-users"
version = "0.1.0"
description = "MCP Server para gerenciamento de usuários do DevsImpacto"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastmcp>=0.5.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "pymongo>=4.6.0",
    "python-dotenv>=1.0.0",
    "httpx>=0.25.0",
]

[project.scripts]
api-mcp-users = "api_mcp_users.main:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["api_mcp_users*"]